# openemr

./: .gitignore
.github/workflows/: agent-ci.yml  agent-deploy.yml  api-docs.yml  composer.yml  database.yml  docker-compose-lint.yml  inferno-test.yml  isolated-tests.yml  js-test.yml  phpstan.yml  rector.yml  semgrep.yml  spellcheck.yml  styling.yml  syntax.yml  test-all.yml  whitespace.yml
agent/: .env.example  Dockerfile  pyproject.toml  start.sh
agent/evals/: test_cases.json
agent/src/agent/: __init__.py  agent.py  app.py  config.py  openemr_client.py  streamlit_app.py
agent/src/agent/tools/: __init__.py  billing.py  clinical.py  drug_interactions.py  encounters.py  patient.py  scheduling.py
agent/src/agent/verification/: __init__.py
agent/tests/: test_openemr_client.py  test_smoke.py  test_tools.py
gauntlet_docs/: AgentForge.md  PreSearch.md  implementation_plan.md
infra/: alb.tf  backend.tf  deploy_key.pub  ecr.tf  ecs-agent.tf  ecs-cluster.tf  ecs-openemr.tf  efs.tf  iam.tf  logs.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security-groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
infra/remote-state-bootstrap/: main.tf
